Wrap fix

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ nav {
 }
 main {
 	background-color: #282a2e;
+	overflow-wrap: break-word;
 	padding: 16px;
 }
 a {
@@ -18,7 +19,7 @@ a {
 }
 .center {
 	margin: auto;
-	max-width: 64em;
+	max-width: 48em;
 }
 .right {
 	float: right;
